:wrench: - fix image from stretching

--- a/src/components/EventPage/EventImage/EventImage.css
+++ b/src/components/EventPage/EventImage/EventImage.css
@@ -15,5 +15,7 @@
 .placeholder{
     width:100%;
     height:250px;
+    object-fit: cover;
     background-color: tomato;
+
 }
